import { buildDynamicSnippetsGenerator } from "./utils/buildDynamicSnippetsGenerator";
import { join, RelativeFilePath } from "@fern-api/fs-utils";
import { DYNAMIC_IR_TEST_DEFINITIONS_DIRECTORY } from "./utils/constant";
import { buildGeneratorConfig } from "./utils/buildGeneratorConfig";
import { AuthValues } from "@fern-fern/ir-sdk/api/resources/dynamic";
import { TestCase } from "./utils/TestCase";

describe("examples", () => {
    const testCases: TestCase[] = [
        {
            description: "GET /metadata (simple)",
            giveRequest: {
                endpoint: {
                    method: "GET",
                    path: "/metadata"
                },
                auth: AuthValues.bearer({
                    token: "<YOUR_API_KEY>"
                }),
                pathParameters: undefined,
                queryParameters: {
                    shallow: false,
                    tag: "development"
                },
                headers: {
                    "X-API-Version": "0.0.1"
                },
                requestBody: undefined
            }
        },
        // {
        //     description: "GET /metadata (allow-multiple)",
        //     giveRequest: {
        //         endpoint: {
        //             method: "GET",
        //             path: "/metadata"
        //         },
        //         auth: AuthValues.bearer({
        //             token: "<YOUR_API_KEY>"
        //         }),
        //         pathParameters: undefined,
        //         queryParameters: {
        //             shallow: false,
        //             tag: ["development", "public"]
        //         },
        //         headers: {
        //             "X-API-Version": "0.0.1"
        //         },
        //         requestBody: undefined
        //     }
        // }
        {
            description: "POST /movie (simple)",
            giveRequest: {
                endpoint: {
                    method: "POST",
                    path: "/movie"
                },
                auth: AuthValues.bearer({
                    token: "<YOUR_API_KEY>"
                }),
                pathParameters: undefined,
                queryParameters: undefined,
                headers: undefined,
                requestBody: {
                    id: "movie-c06a4ad7",
                    prequel: "movie-cv9b914f",
                    title: "The Boy and the Heron",
                    from: "Hayao Miyazaki",
                    rating: 8.0,
                    type: "movie",
                    tag: "development",
                    metadata: {
                        actors: ["Christian Bale", "Florence Pugh", "Willem Dafoe"],
                        releaseDate: "2023-12-08",
                        ratings: {
                            rottenTomatoes: 97,
                            imdb: 7.6
                        }
                    },
                    revenue: 1000000
                }
            }
        },
        {
            description: "POST /big-entity (simple)",
            giveRequest: {
                endpoint: {
                    method: "POST",
                    path: "/big-entity"
                },
                auth: AuthValues.bearer({
                    token: "<YOUR_API_KEY>"
                }),
                pathParameters: undefined,
                queryParameters: undefined,
                headers: undefined,
                requestBody: {
                    castMember: {
                        id: "john.doe",
                        name: "John Doe"
                    }
                }
            }
        }
    ];
    const generator = buildDynamicSnippetsGenerator({
        irFilepath: join(DYNAMIC_IR_TEST_DEFINITIONS_DIRECTORY, RelativeFilePath.of("examples.json")),
        config: buildGeneratorConfig()
    });
    test.each(testCases)("$description", async ({ giveRequest }) => {
        const response = await generator.generate(giveRequest);
        expect(response.snippet).toMatchSnapshot();
    });
});
